<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GLOBAL STRINGS -->
    <string name="app_name">GeoBook</string>
    <string name="ok">OK</string>
    <string name="hello_world">Hello world!</string>
    <string name="userName">John Trolol</string>
    <string name="currentRegion">Columbus, OH</string>

    <!-- STRINGS USED IN SplashScreen -->
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="earthImageDescription">Picture of Earth from orbit</string>
    <string name="version">Version 0.1</string>

    <!-- STRINGS USED IN Map -->
    <string name="title_activity_map">Map Viewer</string>
    <string name="menu_map_profile">Profile</string>
    <string name="menu_map_settings">Settings</string>
    <string name="menu_map_about">About GeoBook</string>
    <string name="menu_map_signout">Sign out</string>
    <string name="dialog_about_title">About GeoBook</string>
    <string name="dialog_about_message">Created by:\n\t\tIan Cross\n\t\tKevin Li\n\t\tNate Lyon\n\t\tRyan Wolfarth</string>
    <string name="confirm_new_cache">Are you sure you would like to create a new cache here?</string>
    <string name="new_cache">New Cache</string>
    <string name="cache_option_yes">Yes</string>
    <string name="cache_option_no">No</string>
    <string name="go_to_cache_message_ad">View Cache?</string>
    <string name="view_cache_title_ad">View Cache</string>
    <string name="list_view">Cache List</string>

    <!-- STRINGS USED IN Photo -->
    <string name="bCapture">capture?</string>
    <string name="title_activity_photo">Photo Log</string>

    <!-- STRINGS USED IN Login -->
    <string name="title_activity_login">Login</string>
    <string name="signin">Sign in</string>
    <string name="google_plus">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="title_activity_google_login">GoogleLogin</string>

    <!-- STRINGS USED IN Profile -->
    <string name="title_activity_profile">User Profile</string>
    <string name="userProfileImageDescription">User\'s profile picture</string>
    <string name="cacheProgress">X of Y Caches</string>
    <string name="lastCacheFound">Cache Name</string>
    <string name="lastCacheDate">01/11/2014</string>
    <string name="lastCacheDifficulty">Hard</string>
    <string name="cont">Continue</string>
    <string name="google">Google</string>

    <!-- STRINGS USED IN Cache -->
    <string name="cachePicture">Picture</string>
    <string name="saveButton">Save</string>
    <string name="title_activity_cache">Cache View</string>
    
    <!-- STRINGS USED IN Settings -->
    <string name="pin_color">Pin Color</string>
    <string name="pin_color_dialog">Customize Pin Color</string>
    <string name="reset_counter">Reset Counter</string>
    <string name="reset_counter_dialog">Reset your counter for the number of caches collected</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="reset_progress_dialog">Reset your current geocache progress</string>

    <!-- STRINGS USED IN ListView -->
    <string name="title_activity_listView">List View</string>

</resources>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GLOBAL STRINGS -->
    <string name="app_name">GeoBook</string>
    <string name="ok">OK</string>
    <string name="hello_world">Hello world!</string>
    <string name="userName">John Trolol</string>
    <string name="currentRegion">Columbus, OH</string>

    <!-- STRINGS USED IN SplashScreen -->
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="earthImageDescription">Picture of Earth from orbit</string>
    <string name="version">Version 0.1</string>

    <!-- STRINGS USED IN Map -->
    <string name="title_activity_map">Map Viewer</string>
    <string name="menu_map_profile">Profile</string>
    <string name="menu_map_settings">Settings</string>
    <string name="menu_map_about">About GeoBook</string>
    <string name="menu_map_signout">Sign out</string>
    <string name="dialog_about_title">About GeoBook</string>
    <string name="dialog_about_message">Created by:\n\t\tIan Cross\n\t\tKevin Li\n\t\tNate Lyon\n\t\tRyan Wolfarth</string>
    <string name="confirm_new_cache">Are you sure you would like to create a new cache here?</string>
    <string name="new_cache">New Cache</string>
    <string name="cache_option_yes">Yes</string>
    <string name="cache_option_no">No</string>
    <string name="go_to_cache_message_ad">View Cache?</string>
    <string name="view_cache_title_ad">View Cache</string>
    <string name="list_view">Cache List</string>

    <!-- STRINGS USED IN Photo -->
    <string name="bCapture">capture?</string>
    <string name="title_activity_photo">Photo Log</string>

    <!-- STRINGS USED IN Login -->
    <string name="title_activity_login">Login</string>
    <string name="signin">Sign in</string>
    <string name="google_plus">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>

    <!-- STRINGS USED IN Profile -->
    <string name="title_activity_profile">User Profile</string>
    <string name="userProfileImageDescription">User\'s profile picture</string>
    <string name="cacheProgress">X of Y Caches</string>
    <string name="lastCacheFound">Cache Name</string>
    <string name="lastCacheDate">01/11/2014</string>
    <string name="lastCacheDifficulty">Hard</string>
    <string name="cont">Continue</string>
    <string name="google">Google</string>

    <!-- STRINGS USED IN Cache -->
    <string name="cachePicture">Picture</string>
    <string name="saveButton">Save</string>
    <string name="title_activity_cache">Cache View</string>

    <!-- STRINGS USED IN Settings -->
    <string name="pin_color">Pin Color</string>

    <!-- STRINGS USED IN ListView -->
    <string name="title_activity_listView">List View</string>

</resources>
>>>>>>> 97d07483199001c450f9a61e44ed8e778ea11a59
